# mcp-clickhouse-dc

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yaml  publish.yml
mcp_clickhouse/: context_manager.py  mcp_env.py  mcp_server.py
test-services/: docker-compose.yaml  init-roles.sql
tests/: conftest.py  test_chdb_tool.py  test_context.py  test_mcp_server.py  test_pagination.py  test_tool.py
